<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView android:text="@string/title" android:layout_width="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textSize="35sp"
        android:layout_height="wrap_content" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:textSize="20sp"
        android:layout_gravity="center_horizontal"
        android:background="#F08C35"
        android:text="@string/app1"
        android:layout_margin="10dp"
        android:layout_weight="1"
        android:onClick="clickHandler"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:textSize="20sp"
        android:layout_gravity="center_horizontal"
        android:background="#F08C35"
        android:text="@string/app2"
        android:layout_margin="10dp"
        android:layout_weight="1"
        android:onClick="clickHandler"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:textSize="20sp"
        android:layout_gravity="center_horizontal"
        android:background="#F08C35"
        android:text="@string/app3"
        android:layout_margin="10dp"
        android:layout_weight="1"
        android:onClick="clickHandler"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:textSize="20sp"
        android:layout_gravity="center_horizontal"
        android:background="#F08C35"
        android:text="@string/app4"
        android:layout_margin="10dp"
        android:layout_weight="1"
        android:onClick="clickHandler"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:textSize="20sp"
        android:layout_gravity="center_horizontal"
        android:background="#F08C35"
        android:text="@string/app5"
        android:layout_margin="10dp"
        android:layout_weight="1"
        android:onClick="clickHandler"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:textSize="20sp"
        android:layout_gravity="center_horizontal"
        android:background="#FF1493"
        android:text="@string/app6"
        android:layout_margin="10dp"
        android:layout_weight="1"
        android:onClick="clickHandler"/>

</LinearLayout>
